--- a/src/sbbs3/sbbsexec.vcxproj
+++ b/src/sbbs3/sbbsexec.vcxproj
@@ -28,6 +28,7 @@
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{af4dbbf1-f99a-4dff-8991-0b98b581151b}</ProjectGuid>
     <RootNamespace>sbbsexec</RootNamespace>
+    <WindowsTargetPlatformVersion>7.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -66,16 +67,16 @@
     <TargetName>sbbsexec</TargetName>
     <IncludePath>c:\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\shared;c:\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\um;$(IncludePath)</IncludePath>
     <LibraryPath>c:\Program Files (x86)\Windows Kits\10\Lib\10.0.22621.0\um\x86;$(LibraryPath)</LibraryPath>
-    <OutDir>.\msvc.win32.dll.debug\</OutDir>
-    <IntDir>.\msvc.win32.debug\sbbsexec\</IntDir>
+    <OutDir>.\msvc.$(Platform)$(TargetExt).$(Configuration)\</OutDir>
+    <IntDir>.\msvc.$(Platform).$(Configuration)\$(TargetName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <TargetName>sbbsexec</TargetName>
     <IncludePath>c:\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\shared;c:\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\um;$(IncludePath)</IncludePath>
     <LibraryPath>c:\Program Files (x86)\Windows Kits\10\Lib\10.0.22621.0\um\x86;$(LibraryPath)</LibraryPath>
-    <OutDir>.\msvc.win32.dll.release\</OutDir>
-    <IntDir>.\msvc.win32.release\sbbsexec\</IntDir>
+    <OutDir>.\msvc.$(Platform)$(TargetExt).$(Configuration)\</OutDir>
+    <IntDir>.\msvc.$(Platform).$(Configuration)\$(TargetName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -85,6 +86,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <CallingConvention>StdCall</CallingConvention>
+      <ProgramDataBaseFileName>$(IntDir)</ProgramDataBaseFileName>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -103,6 +105,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <CallingConvention>StdCall</CallingConvention>
+      <ProgramDataBaseFileName>$(IntDir)</ProgramDataBaseFileName>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
